--- a/.github/.github/workflows/dotnet.yml
+++ b/.github/.github/workflows/dotnet.yml
@@ -1,29 +1,26 @@
 name: .NET CI
+
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - '**'          # روی همهٔ برنچ‌ها
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main          # روی PRهایی که مقصدشان main است
+  workflow_dispatch:   # اجازهٔ Run دستی
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: |
-            8.0.x
-            9.0.x
-      - name: Restore
-        run: dotnet restore
-      - name: Build
-        run: dotnet build --no-restore --configuration Release
-      - name: Test
-        run: dotnet test --no-build --configuration Release --collect:"XPlat Code Coverage" --logger "trx;LogFileName=test_results.trx"
-      - name: Upload Test Results
-        if: always()
+          dotnet-version: 8.0.x
+      - run: dotnet restore
+      - run: dotnet build --no-restore --configuration Release
+      - run: dotnet test --no-build --configuration Release --logger "trx;LogFileName=test_results.trx"
+      - if: always()
         uses: actions/upload-artifact@v4
         with:
           name: test-results
